<resources>
    <string name="app_name">Personal OOTD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_initial_info">InitialInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_personal_res">PersonalRes</string>


    // SelfAnalysis
    <string name="selfAnalysis_sel_info">더 잘 어울리는 색상을 선택하세요.</string>
    <string name="selfAnalysis_selection">선택</string>

    // Bottom Navigation
    <string name="menu_matching">Analysis</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    // Paring Fragment
    <string name="spring">봄</string>
    <string name="summer">여름</string>
    <string name="autumn">가을</string>
    <string name="winter">겨울</string>
    <string name="spring_exp">
        봄 웜톤은 밝고 생기있는 이미지의 퍼스널컬러입니다.\n
        고명도, 고채도의 따뜻한 색상이 잘 어울리는 브라이트 톤,
        고명도, 저채도의 따뜻한 색상이 잘 어울리는 라이트 톤으로 분류됩니다.
        작은 패턴이 들어간 아이템 등을 활용한 생기있는 스타일링을 추천합니다.</string>

    <string name="summer_exp">
        여름 쿨톤은 우아하고 지적인 이미지의 퍼스널컬러입니다.\n
        고명도, 고채도의 차가운 색상이 잘 어울리는 브라이트 톤,
        고명도, 저채도의 차가운 색상이 잘 어울리는 라이트 톤,
        중명도, 저채도의 차가운 색상이 잘 어울리는 뮤트 톤으로 분류됩니다.
        낮은 대비감의 깔끔한 스타일링을 추천합니다.</string>

    <string name="autumn_exp">
        가을 웜톤은 자연스럽고 편안한 이미지의 퍼스널컬러입니다.\n
        중명도, 고채도의 따뜻한 색상이 잘 어울리는 스트롱 톤,
        중명도, 저채도의 따뜻한 색상이 잘 어울리는 뮤트 톤,
        저명도, 저채도의 따뜻한 색상이 잘 어울리는 딥 톤으로 분류됩니다.
        에스닉한 무늬와 천연 소재를 활용한 스타일링을 추천합니다.</string>

    <string name="winter_exp">
        겨울 쿨톤은 지적이고 도시적인 이미지의 퍼스널컬러입니다.\n
        고명도, 고채도의 차가운 색상이 잘 어울리는 브라이트 톤,
        고명도, 저채도의 차가운 색상이 잘 어울리는 페일 톤,
        저명도, 저채도의 차가운 색상이 잘 어울리는 딥 톤으로 분류됩니다.
        높은 대비감이 돋보이는 화려한 스타일링을 추천합니다.</string>

</resources>