<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pic"
        android:title="@string/menu_matching"
        app:labelVisibilityMode="unlabeled"
        android:enabled="true"
        android:icon="@drawable/hanger"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/home"
        android:title="@string/menu_home"
        app:labelVisibilityMode="unlabeled"
        android:enabled="true"
        android:icon="@drawable/home"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        app:labelVisibilityMode="unlabeled"
        android:enabled="true"
        android:icon="@drawable/settings"
        app:showAsAction="always"
        />
</menu>