<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffffff"
    tools:context=".view.fragment.PairingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        app:layout_constraintTop_toTopOf="parent"

        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:layout_marginBottom="8dp"
        >

        <ImageView
            android:id="@+id/back_btn2"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:src="@drawable/back"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/cloth_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"

            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".6"
            app:layout_constraintHeight_percent=".4"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/recommend_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:textSize="24sp"

            app:layout_constraintTop_toBottomOf="@id/cloth_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/season_percentage_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintHeight_percent=".25"

            app:layout_constraintTop_toBottomOf="@id/recommend_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/spring_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.25"
                android:orientation="horizontal"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/spring_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:textSize="16sp"
                    android:text="@string/spring"/>

                <TextView
                    android:id="@+id/spring_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintStart_toEndOf="@id/spring_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:text="70%"
                    android:textSize="16sp"/>

                <ProgressBar
                    android:id="@+id/spring_progressbar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.7"

                    app:layout_constraintStart_toEndOf="@id/spring_percentage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:progressTint="@color/springMainColor"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/summer_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.25"
                android:orientation="horizontal"

                app:layout_constraintTop_toBottomOf="@id/spring_layout"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/summer"/>

                <TextView
                    android:id="@+id/summer_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <ProgressBar
                    android:id="@+id/summer_progressbar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/summerMainColor"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/autumn_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.25"
                android:orientation="horizontal"

                app:layout_constraintTop_toBottomOf="@id/summer_layout"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/autumn"/>

                <TextView
                    android:id="@+id/autumn_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <ProgressBar
                    android:id="@+id/autumn_progressbar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/autumnMainColor"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/winter_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.25"
                android:orientation="horizontal"

                app:layout_constraintTop_toBottomOf="@id/autumn_layout"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/winter"/>

                <TextView
                    android:id="@+id/winter_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <ProgressBar
                    android:id="@+id/winter_progressbar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/winterMainColor" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/season_percentage_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RelativeLayout
                android:id="@+id/ootd_item1_layout"
                android:layout_width="120dp"
                android:layout_height="140dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <ImageView
                    android:id="@+id/ootd_item1_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    />

                <TextView
                    android:id="@+id/ootd_item1_text"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ootd_item2_layout"
                android:layout_width="120dp"
                android:layout_height="140dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <ImageView
                    android:id="@+id/ootd_item2_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/ootd_item2_text"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    />

            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>